--- a/resources/appserver/templates/dashboard.html
+++ b/resources/appserver/templates/dashboard.html
@@ -12,7 +12,7 @@ config_qs = dict(autoload=1)
     <title>${_('Loading...')}</title>
     <meta name="description" content="listen to your data" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" href="180.png">
+    <link rel="apple-touch-icon" href="appLogo.png">
 </head>
 
 <body>
